🐛 Fix swagger documentation and authentication controllers : corrección en la documentación swagger y mejoras en los controladores de autenticación
